# Tetris

./: CMakeLists.txt  README.md
Application/: Application.c  Application.h  CMakeLists.txt  PushButton.c  PushButton.h  core.c  core.h  draw.c  draw.h  texture.c  texture.h  tools.c  tools.h
Dependences/include/mxml/: mxml.h
Dependences/lib/: CMakeLists.txt
Dependences/lib/x64/: mxml4.lib
Tetris/: CMakeLists.txt  Tetris.c  Tetris.h
Widgets/: CMakeLists.txt
Widgets/GameWidget/: GameWidget.c  GameWidget.h
Widgets/HelpWidget/: HelpWidget.c  HelpWidget.h
Widgets/MenuWidget/: MenuWidget.c  MenuWidget.h
Widgets/MenuWidgwt/: MenuWidget.c  MenuWidget.h
Widgets/SettingWidget/: SettingWidget.c  SettingWidget.h
Widgets/SettingWidgwt/: SettingWidget.c  SettingWidget.h
